--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.11.0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "emailjs-com": "^3.2.0",
     "react-github-calendar": "^4.5.9",
     "react-github-contribution-calendar": "^2.2.0",
