--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
     "axios": "^1.11.0",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "emailjs-com": "^3.2.0",
     "react-github-calendar": "^4.5.9",
     "react-github-contribution-calendar": "^2.2.0",
     "react-icons": "^5.5.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
